@@ -1,3 +1,3 @@
 * Digest compare/check/verify (Need UI ideas)
 * Multithreaded hashing
-* Thunar plugin
+* GSettings?
