@@ -1,6 +1,10 @@
-if ENABLE_NAUTILUS
-SUBDIRS = nautilus
+SUBDIRS =
+
+if ENABLE_NAUTILUS_DATA
+SUBDIRS += nautilus
 endif
 
+if ENABLE_GTKHASH
 pkgdata_DATA = gtkhash.xml
 EXTRA_DIST = gtkhash.xml
+endif
